--- a/src/app/components/shell/header/main-menu/dropdown/dropdown.scss
+++ b/src/app/components/shell/header/main-menu/dropdown/dropdown.scss
@@ -7,7 +7,6 @@
 // This is necessary to allow the menu to be wider than the header item
 .dropdown-container {
     height: 0;
-    min-width: 20rem;
     overflow: visible;
     position: absolute;
 }
